# NL2ML-SQL

./: .env.sample  .gitignore  README.md  Router_data_part1.jsonl  Router_data_part2.jsonl  Router_data_part3.jsonl  SFT_best_of_n(16).jsonl  SFT_best_of_n(2).jsonl  SFT_best_of_n(4).jsonl  SFT_best_of_n(8).jsonl  SFT_evaluation_results_test_full.jsonl  SFT_self_consistency(16).ipynb  SFT_self_consistency(16)_evaluation_results_test_small.jsonl  SFT_zero_shot_v2.jsonl  SFT_zero_shot_v3.jsonl  Soo_Template_Generator.ipynb  draw_figures.py  exp_mlselection.py  exp_router.py  exp_typical.py  grpo_multi.py  grpo_training.py  intent_eval.py  intent_train.py  pyproject.temp.toml  pyproject.toml  requirements.txt  sbatch_grpo.sh  seed_test.jsonl  seed_test_inference.jsonl  seed_train_CoT.jsonl  temp.csv  test.jsonl  test_result.jsonl  test_set_final_part_1.jsonl  test_set_final_part_2.jsonl  test_set_final_part_3.jsonl  test_set_small.jsonl  test_set_small_inference_self_consistency(16).jsonl  test_set_small_inference_self_consistency(2).jsonl  (+7 more)
data/: data_dictionaries.json  data_mapping_cleaned.json  exp_scores.csv  get_dataset_stats.py  local_knowledge_db.csv  local_knowledge_db2.csv  test_preliminary.jsonl  test_seed.jsonl  train_seed_cots.jsonl
exps/: exp_mlselection.csv  full_test.csv
src/: arguments.py  evaluator.py  extract_intent_bigqueryml.py  extract_intent_postgresml.py  gen_question.py  gen_sqls.py  gen_unlabeled.py  prompts.py  reward.py  tempgenerator.py
