[project]
name = "nl2ml-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlflow>=2.22.0",
    "setuptools>=80.7.1",
    "torch==2.5.1",
    "unsloth==2025.3.14",
    "vllm==0.7.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
